# clinkedlist

./: .gitignore  CMakeLists.txt  README.md
include/: llist.h  test.h
src/: llist.c  main.c
test/: test.c  test_append_node.c  test_create_node.c  test_insert_node.c  test_list_size.c  test_pop_node.c  test_push_node.c  test_remove_node.c
