cmake_minimum_required(VERSION 3.13 FATAL_ERROR)
project(linkedlist LANGUAGES C)
set(SOURCES src/llist.c)
add_definitions("-g")
include_directories(include)
add_executable(main src/main.c ${SOURCES})

enable_testing()
add_executable(test_create_node test/test_create_node.c ${SOURCES})
add_test(test_create_node ${EXECUTABLE_OUTPUT_PATH}/test_create_node)
add_executable(test_append_node test/test_append_node.c ${SOURCES})
add_test(test_append_node ${EXECUTABLE_OUTPUT_PATH}/test_append_node)
add_executable(test_push_node test/test_push_node.c ${SOURCES})
add_test(test_push_node ${EXECUTABLE_OUTPUT_PATH}/test_push_node)
add_executable(test_pop_node test/test_pop_node.c ${SOURCES})
add_test(test_pop_node ${EXECUTABLE_OUTPUT_PATH}/test_pop_node)
